@@ -1,6 +1,6 @@
 
 
-	FCKLang.inserHTML_buttonTooltip					= 'Insert HTML';
-	FCKLang.insertHtml_dialogTitle						= 'Insert HTML';
-	FCKLang.inserHtml_help								= 'Enter any HTML below and click \'ok\' to insert it at the location of the cursor in the editor.';
+	//FCKLang.inserHTML_buttonTooltip					= 'Insert HTML';
+	//FCKLang.insertHtml_dialogTitle						= 'Insert HTML';
+	//FCKLang.inserHtml_help								= 'Enter any HTML below and click \'ok\' to insert it at the location of the cursor in the editor.';
 
