@@ -1,5 +1,5 @@
 
 
-	FCKLang.inserHTML_buttonTooltip					= 'HTML invoegen';
-	FCKLang.insertHtml_dialogTitle						= 'HTML invoegen';
+//	FCKLang.inserHTML_buttonTooltip					= 'HTML invoegen';
+//	FCKLang.insertHtml_dialogTitle						= 'HTML invoegen';
 	FCKLang.inserHtml_help								= 'Geef HTML code in en klik op \'ok\' om de code in te voegen op de locatie van de cursor in de editor.';
