@@ -142,13 +142,13 @@ FCKConfig.Plugins.Add( 'paradelete' ) ;
 // FCKConfig.Plugins.Add( 'autogrow' ) ;
 FCKConfig.Plugins.Add( 'range' ) ;
 //FCKConfig.Plugins.Add( 'breakdel' ) ;
-FCKConfig.Plugins.Add('insertHtml', 'en,nl');
+FCKConfig.Plugins.Add('insertHtml');
 // FCKConfig.Plugins.Add('footnote', 'en,de');
 FCKConfig.Plugins.Add( 'insertHtmlCode' ) ;
 FCKConfig.Plugins.Add( 'insertHtmlunorderedList' ) ;
 FCKConfig.insertHtml_snippet = '<ol><li>&nbsp;</li></ol>';
 //FCKConfig.insertHtml_showDialog = true;
-FCKConfig.insertHtml_buttonTooltip = 'Insert Nested Ordered List';
+//FCKConfig.insertHtml_buttonTooltip = 'Insert Nested Ordered List';
 FCKConfig.Plugins.Add( 'geshi', 'en') ;
 FCKConfig.Plugins.Add( 'fonts', 'en,nl') ;
 FCKConfig.Plugins.Add('keyboard', 'en') ;
